@@ -2,12 +2,12 @@ package harvester
 
 import (
 	"fmt"
-	"regexp"
 	"time"
 
 	cfg "github.com/elastic/beats/filebeat/config"
 	"github.com/elastic/beats/filebeat/harvester/reader"
 	"github.com/elastic/beats/libbeat/common"
+	"github.com/elastic/beats/libbeat/common/match"
 
 	"github.com/dustin/go-humanize"
 	"github.com/elastic/beats/libbeat/logp"
@@ -47,8 +47,8 @@ type harvesterConfig struct {
 	CloseEOF             bool                    `config:"close_eof"`
 	CloseTimeout         time.Duration           `config:"close_timeout" validate:"min=0"`
 	ForceCloseFiles      bool                    `config:"force_close_files"`
-	ExcludeLines         []*regexp.Regexp        `config:"exclude_lines"`
-	IncludeLines         []*regexp.Regexp        `config:"include_lines"`
+	ExcludeLines         []match.Matcher         `config:"exclude_lines"`
+	IncludeLines         []match.Matcher         `config:"include_lines"`
 	MaxBytes             int                     `config:"max_bytes" validate:"min=0,nonzero"`
 	Multiline            *reader.MultilineConfig `config:"multiline"`
 	JSON                 *reader.JSONConfig      `config:"json"`
